classDiagram
  class MetaCollection {
    tenantId
    name
    permission
    validationSchema
    storageProfile
    schemaVersion
    active
  }
  class MetaField
  class EntityRecord
  class EventEntry
  class Pipeline
  class Checkpoint
  class MemoryNamespace
  class AgentRegistryRecord
  MetaCollection "1" --> "*" MetaField
  MetaCollection --> "*" EntityRecord
  EntityRecord --> "*" EventEntry
  Pipeline --> "*" Checkpoint
  AgentRegistryRecord --> "*" EventEntry
  MemoryNamespace --> "*" EntityRecord

